--- a/roles/sync-devstack-data/tasks/main.yaml
+++ b/roles/sync-devstack-data/tasks/main.yaml
@@ -1,13 +1,3 @@
-- name: Ensure the data folder exists
-  become: true
-  file:
-    path: "{{ devstack_base_dir }}/data"
-    state: directory
-    owner: stack
-    group: stack
-    mode: 0755
-  when: 'inventory_hostname in groups["subnode"]|default([])'
-
 - name: Ensure the CA folder exists
   become: true
   file:
@@ -45,4 +35,15 @@
     src: "{{ zuul.executor.work_root }}/CA/"
     dest: "{{ devstack_base_dir }}/data/"
     mode: push
+  when: 'inventory_hostname in groups["subnode"]|default([])'
+
+- name: Ensure the CA folder has the correct permissions
+  become: true
+  file:
+    path: "{{ devstack_base_dir }}/data/CA"
+    state: directory
+    owner: stack
+    group: stack
+    mode: 0755
+    recurse: yes
   when: 'inventory_hostname in groups["subnode"]|default([])'
