Add shade and osc functional jobs to devstack pipelines
python-openstackclient and shade both gate on new-style devstack jobs.
They each serve as good test cases to make sure the base jobs
don't break. osc uses devstack-tox-functional and shade uses
devstack-tox-functional-consumer.

Change-Id: I817639ed30cda8ea51d156872a14bbcf10a4e63d

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -621,6 +621,14 @@
             irrelevant-files:
               - ^.*\.rst$
               - ^doc/.*$
+        - osc-functional-devstack:
+            irrelevant-files:
+              - ^.*\.rst$
+              - ^doc/.*$
+        - shade-functional-devstack:
+            irrelevant-files:
+              - ^.*\.rst$
+              - ^doc/.*$
     gate:
       jobs:
         - devstack
@@ -638,6 +646,14 @@
               - ^.*\.rst$
               - ^doc/.*$
         - neutron-grenade:
+            irrelevant-files:
+              - ^.*\.rst$
+              - ^doc/.*$
+        - osc-functional-devstack:
+            irrelevant-files:
+              - ^.*\.rst$
+              - ^doc/.*$
+        - shade-functional-devstack:
             irrelevant-files:
               - ^.*\.rst$
               - ^doc/.*$
