[DNM][ironic test] Try ram/disk filter with filter_scheduler
Related-Bug: #1787910
Change-Id: I7c58aae7873559cd53104712fec9368f42b04bb6

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -482,12 +482,12 @@
     check:
       jobs:
         - devstack
-        - devstack-platform-centos-7
-        - devstack-platform-opensuse-423
-        - devstack-platform-opensuse-tumbleweed
-        - devstack-platform-fedora-latest
-        - devstack-multinode
-        - devstack-unit-tests
+          #- devstack-platform-centos-7
+          #- devstack-platform-opensuse-423
+          #- devstack-platform-opensuse-tumbleweed
+          #- devstack-platform-fedora-latest
+          #- devstack-multinode
+          #- devstack-unit-tests
     gate:
       jobs:
         - devstack
