Follow job rename for swift-functional
the swift functional job has been moved, follow rename
and use in-repo job.

Change-Id: Idccc21e47b2cc04e5eeab4db7f7fb7cf156f8049

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -495,7 +495,7 @@
         - openstack-tox-bashate
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
-        - legacy-swift-dsvm-functional:
+        - swift-dsvm-functional:
             voting: false
             irrelevant-files:
               - ^.*\.rst$
