--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -495,7 +495,7 @@
         - openstack-tox-bashate
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
-        - legacy-swift-dsvm-functional:
+        - swift-dsvm-functional:
             voting: false
             irrelevant-files:
               - ^.*\.rst$
@@ -563,11 +563,11 @@
         - neutron-fullstack-with-uwsgi
         - neutron-functional-with-uwsgi
         - neutron-tempest-with-uwsgi
-        - legacy-tempest-dsvm-full-devstack-plugin-ceph:
+        - devstack-plugin-ceph-tempest:
             irrelevant-files:
               - ^.*\.rst$
               - ^doc/.*$
-        - legacy-tempest-dsvm-py35-full-devstack-plugin-ceph:
+        - devstack-plugin-ceph-tempest-py3:
             irrelevant-files:
               - ^.*\.rst$
               - ^doc/.*$
