DNM: Test with SERVICE_IP_VERSION=6
Change-Id: Iac1d3944b3158825d0ce4f746303b9a3a25f30e4

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -205,7 +205,7 @@
     vars:
       devstack_localrc:
         # Multinode specific settings
-        SERVICE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
+        # SERVICE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
         HOST_IP: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
         PUBLIC_BRIDGE_MTU: '{{ external_bridge_mtu }}'
       devstack_services:
@@ -224,12 +224,12 @@
         devstack_localrc:
           # Multinode specific settings
           HOST_IP: "{{ hostvars[inventory_hostname]['nodepool']['private_ipv4'] }}"
-          SERVICE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
+          # SERVICE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv6'] }}"
           PUBLIC_BRIDGE_MTU: '{{ external_bridge_mtu }}'
           # Subnode specific settings
           DATABASE_TYPE: mysql
-          RABBIT_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
-          DATABASE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
+          # RABBIT_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
+          # DATABASE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
 
 
 - job:
@@ -369,8 +369,8 @@
           # ceilometer-*: false
         devstack_localrc:
           # Subnode specific settings
-          GLANCE_HOSTPORT: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}:9292"
-          Q_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
+          # GLANCE_HOSTPORT: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}:9292"
+          # Q_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
           NOVA_VNC_ENABLED: true
           VNCSERVER_LISTEN: 0.0.0.0
           VNCSERVER_PROXYCLIENT_ADDRESS: $HOST_IP
