--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -231,7 +231,6 @@
           RABBIT_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
           DATABASE_HOST: "{{ hostvars['controller']['nodepool']['private_ipv4'] }}"
 
-
 - job:
     name: devstack
     parent: devstack-minimal
@@ -376,6 +375,48 @@
           VNCSERVER_PROXYCLIENT_ADDRESS: $HOST_IP
 
 - job:
+    name: devstack-ipv6
+    parent: devstack
+    description: |
+      Base devstack job for integration gate with IPv6.
+
+      This base job can be used for single node and multinode devstack jobs.
+
+      With a single node nodeset, this job sets up an "all-in-one" (aio)
+      devstack with the six OpenStack services included in the devstack tree:
+      keystone, glance, cinder, neutron, nova and swift.
+
+      With a two node nodeset, this job sets up an aio + compute node.
+      The controller can be customised using host-vars.controller, the
+      sub-nodes can be customised using group-vars.subnode.
+
+      Descendent jobs can enable / disable services, add devstack configuration
+      options, enable devstack plugins, configure log files or directories to be
+      transferred to the log server.
+
+      The job assumes that there is only one controller node. The number of
+      subnodes can be scaled up seamlessly by setting a custom nodeset in
+      job.nodeset.
+
+      The run playbook consists of a single role, so it can be easily rewritten
+      and extended.
+    voting: false
+    vars:
+      devstack_localrc:
+        SERVICE_IP_VERSION: 6
+        # IPv6 and certificates known issue with python2
+        # https://bugs.launchpad.net/devstack/+bug/1794929
+        USE_PYTHON3: true
+    group-vars:
+      subnode:
+        devstack_localrc:
+          # Subnode specific settings
+          SERVICE_IP_VERSION: 6
+          # IPv6 and certificates known issue with python2
+          # https://bugs.launchpad.net/devstack/+bug/1794929
+          USE_PYTHON3: true
+
+- job:
     name: devstack-multinode
     parent: devstack
     nodeset: openstack-two-node
@@ -486,6 +527,7 @@
     check:
       jobs:
         - devstack
+        - devstack-ipv6
         - devstack-platform-centos-7
         - devstack-platform-opensuse-423
         - devstack-platform-opensuse-tumbleweed
