--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -88,6 +88,36 @@
         nodes:
           - compute1
 
+- nodeset:
+    name: openstack-two-node-bionic
+    nodes:
+      - name: controller
+        label: ubuntu-bionic
+      - name: compute1
+        label: ubuntu-bionic
+    groups:
+      # Node where tests are executed and test results collected
+      - name: tempest
+        nodes:
+          - controller
+      # Nodes running the compute service
+      - name: compute
+        nodes:
+          - controller
+          - compute1
+      # Nodes that are not the controller
+      - name: subnode
+        nodes:
+          - compute1
+      # Switch node for multinode networking setup
+      - name: switch
+        nodes:
+          - controller
+      # Peer nodes for multinode networking setup
+      - name: peers
+        nodes:
+          - compute1
+
 - job:
     name: devstack-base
     parent: multinode
@@ -268,7 +298,7 @@
 
       The run playbook consists of a single role, so it can be easily rewritten
       and extended.
-    nodeset: openstack-single-node
+    nodeset: openstack-single-node-bionic
     required-projects:
       - git.openstack.org/openstack/cinder
       - git.openstack.org/openstack/glance
@@ -399,11 +429,28 @@
         USE_PYTHON3: true
 
 - job:
+    name: devstack-xenial
+    parent: devstack
+    nodeset: openstack-single-node
+    description: |
+      Simple singlenode test to verify functionality on devstack
+      side running on Xenial.
+
+- job:
     name: devstack-multinode
+    parent: devstack
+    nodeset: openstack-two-node-bionic
+    description: |
+      Simple multinode test to verify multinode functionality on devstack side.
+      This is not meant to be used as a parent job.
+
+- job:
+    name: devstack-multinode-xenial
     parent: devstack
     nodeset: openstack-two-node
     description: |
-      Simple multinode test to verify multinode functionality on devstack side.
+      Simple multinode test to verify multinode functionality on devstack
+      side running on Xenial.
       This is not meant to be used as a parent job.
 
 # NOTE(ianw) Platform tests have traditionally been non-voting because
@@ -436,6 +483,13 @@
     parent: tempest-full
     description: Fedora latest platform test
     nodeset: devstack-single-node-fedora-latest
+    voting: false
+
+- job:
+    name: devstack-platform-xenial
+    parent: tempest-full
+    description: Ubuntu Xenial platform test
+    nodeset: openstack-single-node
     voting: false
 
 - job:
@@ -509,13 +563,16 @@
     check:
       jobs:
         - devstack
+        - devstack-xenial
         - devstack-ipv6:
             voting: false
         - devstack-platform-centos-7
         - devstack-platform-opensuse-150
         - devstack-platform-opensuse-tumbleweed
         - devstack-platform-fedora-latest
+        - devstack-platform-xenial
         - devstack-multinode
+        - devstack-multinode-xenial
         - devstack-unit-tests
         - openstack-tox-bashate
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
@@ -545,6 +602,9 @@
     gate:
       jobs:
         - devstack
+        - devstack-xenial
+        - devstack-multinode
+        - devstack-multinode-xenial
         - devstack-unit-tests
         - openstack-tox-bashate
         - neutron-grenade-multinode:
@@ -559,6 +619,7 @@
             irrelevant-files:
               - ^.*\.rst$
               - ^doc/.*$
+
     # Please add a note on each job and conditions for the job not
     # being experimental any more, so we can keep this list somewhat
     # pruned.
