--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -508,6 +508,12 @@
     description: Fedora latest platform test
     nodeset: devstack-single-node-fedora-latest
     voting: false
+    vars:
+      devstack_localrc:
+        TCPDUMP_ARGS: "-i any tcp port 3260"
+        ISCSID_DEBUG: 1
+      devstack_services:
+        tcpdump: true
 
 - job:
     name: devstack-platform-xenial
@@ -580,48 +586,48 @@
     run: playbooks/unit-tests/run.yaml
 
 - project:
-    templates:
-      - integrated-gate
-      - integrated-gate-py3
-      - publish-openstack-docs-pti
+#    templates:
+#      - integrated-gate
+#      - integrated-gate-py3
+#      - publish-openstack-docs-pti
     check:
       jobs:
-        - devstack
-        - devstack-xenial
-        - devstack-ipv6:
-            voting: false
-        - devstack-platform-centos-7
-        - devstack-platform-opensuse-150
+#        - devstack
+#        - devstack-xenial
+#        - devstack-ipv6:
+#            voting: false
+#        - devstack-platform-centos-7
+#        - devstack-platform-opensuse-150
         - devstack-platform-fedora-latest
-        - devstack-platform-xenial
-        - devstack-multinode
-        - devstack-multinode-xenial
-        - devstack-unit-tests
-        - openstack-tox-bashate
-        - ironic-tempest-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
-            voting: false
-        - swift-dsvm-functional:
-            voting: false
-            irrelevant-files:
-              - ^.*\.rst$
-              - ^doc/.*$
-        - neutron-grenade:
-            irrelevant-files:
-              - ^.*\.rst$
-              - ^doc/.*$
-        - neutron-grenade-multinode:
-            irrelevant-files:
-              - ^.*\.rst$
-              - ^doc/.*$
-        - neutron-tempest-linuxbridge:
-            irrelevant-files:
-              - ^.*\.rst$
-              - ^doc/.*$
-        - tempest-multinode-full:
-            voting: false
-            irrelevant-files:
-              - ^.*\.rst$
-              - ^doc/.*$
+#        - devstack-platform-xenial
+#        - devstack-multinode
+#        - devstack-multinode-xenial
+#        - devstack-unit-tests
+#        - openstack-tox-bashate
+#        - ironic-tempest-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
+#            voting: false
+#        - swift-dsvm-functional:
+#            voting: false
+#            irrelevant-files:
+#              - ^.*\.rst$
+#              - ^doc/.*$
+#        - neutron-grenade:
+#            irrelevant-files:
+#              - ^.*\.rst$
+#              - ^doc/.*$
+#        - neutron-grenade-multinode:
+#            irrelevant-files:
+#              - ^.*\.rst$
+#              - ^doc/.*$
+#        - neutron-tempest-linuxbridge:
+#            irrelevant-files:
+#              - ^.*\.rst$
+#              - ^doc/.*$
+#        - tempest-multinode-full:
+#            voting: false
+#            irrelevant-files:
+#              - ^.*\.rst$
+#              - ^doc/.*$
     gate:
       jobs:
         - devstack
