Add devstack-tox-functional-no-ts job
This is a variant of the devstack-tox-functional job that doesn't
include the bindep and test-setup roles. The intention is that this can
be used to create integration jobs that run against multiple projects.

Change-Id: Ic6f27779e0e66e881576afd52a178a3555a4aed0

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -429,7 +429,7 @@
 
       This job is not intended to be run directly. It's just here
       for organizational purposes for devstack-tox-functional and
-      devstack-tox-functional-consumer.
+      other clients.
     post-run: playbooks/tox/post.yaml
     vars:
       tox_envlist: functional
@@ -451,6 +451,15 @@
       to True to re-enable sibling processing.
     run: playbooks/tox/run-both.yaml
 
+- job:
+    name: devstack-tox-functional-no-ts
+    parent: devstack-tox-functional
+    description: |
+      Variant of devstack-tox-functional that does not include the
+      bindep and test-setup roles. To be used for jobs that are to
+      be run as integration jobs against multiple projects.
+    run: playbooks/tox/run-both-no-ts.yaml
+ 
 - job:
     name: devstack-tox-functional-consumer
     parent: devstack
