zuul: add devstack-consumer job
In certain cases, you may want to get an OpenStack cloud using
DevStack but run tests against it using Ansible rather than using
tox.

This adds a job which runs devstack in `pre` in order to allow
consumers to manually define a `run` section with their own job
content to consume the cloud.

The difference from the existing `devstack-tox-functional-consumer`
is that this does not rely on tox being there.

Change-Id: Iebb14459a374928305c5d47ba43d92fea4c68ba8

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -570,6 +570,23 @@
     run: playbooks/tox/run.yaml
 
 - job:
+    name: devstack-consumer
+    parent: devstack
+    abstract: true
+    description: |
+      Base job for devstack-based tests for projects that
+      consume the devstack cloud.
+
+      This base job should only be used by projects that are not involved
+      in the devstack deployment step, but are instead projects that are using
+      devstack to get a cloud against which they can test things.
+
+      Runs devstack in pre-run, then run your tests within the a playbook
+      defined inside the ``run`` parameter.
+    pre-run:
+      - playbooks/devstack.yaml
+
+- job:
     name: devstack-unit-tests
     description: |
       Runs unit tests on devstack project.
