setup-devstack-source-dirs: also copy github libraries
This will help us use standard mechanisms to install libraries that
Zuul has cloned from github

Change-Id: I8ecfeeba9133ce175fb72fc59be696879013d927

--- a/roles/setup-devstack-source-dirs/tasks/main.yaml
+++ b/roles/setup-devstack-source-dirs/tasks/main.yaml
@@ -4,6 +4,7 @@
       - src/git.openstack.org/openstack
       - src/git.openstack.org/openstack-dev
       - src/git.openstack.org/openstack-infra
+      - src/github.com
     file_type: directory
   register: found_repos
 
